--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_YOUTUBE_API_KEY = "f93e3684bcmsh901bf2e8d4ca067p1575a6jsn4cc1c626e5a3"
+# REACT_APP_YOUTUBE_API_KEY = "f93e3684bcmsh901bf2e8d4ca067p1575a6jsn4cc1c626e5a3"
+REACT_APP_YOUTUBE_API_KEY = "fcbb19c073msh447eaf801b7077fp126b27jsne5c154e0b48a"
